--- a/Views/Appointments/Delete.cshtml
+++ b/Views/Appointments/Delete.cshtml
@@ -1,63 +1,74 @@
 @model PatientManagementSystem.Models.Appointment
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Appointment";
 }
 
-<h1>Delete</h1>
+<h1>Delete Appointment</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Appointment</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AppointmentDateTime)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AppointmentDateTime)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Notes)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Notes)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FrontImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FrontImageUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LeftImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LeftImageUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RightImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RightImageUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BackImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BackImageUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Patient)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Patient.Contact)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+@if (Model == null)
+{
+    <div class="alert alert-danger">
+        <p>The appointment details are not available. Please return to the list.</p>
+        <a asp-action="Index" class="btn btn-primary">Back to List</a>
+    </div>
+}
+else
+{
+    <h3>Are you sure you want to delete this appointment?</h3>
+    <div>
+        <h4>Appointment Information</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">Appointment Date & Time</dt>
+            <dd class="col-sm-10">@Model.AppointmentDateTime.ToString("f")</dd>
+
+            <dt class="col-sm-2">Notes</dt>
+            <dd class="col-sm-10">@Model.Notes ?? "No notes provided"</dd>
+
+            <dt class="col-sm-2">Patient Name</dt>
+            <dd class="col-sm-10">@Model.Patient?.Name ?? "Unknown"</dd>
+
+            <dt class="col-sm-2">Contact</dt>
+            <dd class="col-sm-10">@Model.Patient?.Contact ?? "N/A"</dd>
+
+            <h4>Images</h4>
+            <div class="row">
+                @if (!string.IsNullOrEmpty(Model.FrontImageUrl))
+                {
+                    <div class="col-sm-3">
+                        <img src="@Model.FrontImageUrl" alt="Front Image" class="img-thumbnail" style="width: 100%; height: auto;" />
+                        <p class="text-center mt-2">Front</p>
+                    </div>
+                }
+                @if (!string.IsNullOrEmpty(Model.LeftImageUrl))
+                {
+                    <div class="col-sm-3">
+                        <img src="@Model.LeftImageUrl" alt="Left Image" class="img-thumbnail" style="width: 100%; height: auto;" />
+                        <p class="text-center mt-2">Left</p>
+                    </div>
+                }
+                @if (!string.IsNullOrEmpty(Model.RightImageUrl))
+                {
+                    <div class="col-sm-3">
+                        <img src="@Model.RightImageUrl" alt="Right Image" class="img-thumbnail" style="width: 100%; height: auto;" />
+                        <p class="text-center mt-2">Right</p>
+                    </div>
+                }
+                @if (!string.IsNullOrEmpty(Model.BackImageUrl))
+                {
+                    <div class="col-sm-3">
+                        <img src="@Model.BackImageUrl" alt="Back Image" class="img-thumbnail" style="width: 100%; height: auto;" />
+                        <p class="text-center mt-2">Back</p>
+                    </div>
+                }
+            </div>
+        </dl>
+
+        <form asp-action="Delete" method="post">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
+            <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+        </form>
+    </div>
+}
