--- a/Views/Appointments/Details.cshtml
+++ b/Views/Appointments/Details.cshtml
@@ -1,60 +1,75 @@
 @model PatientManagementSystem.Models.Appointment
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Appointment Details";
 }
 
-<h1>Details</h1>
+<h1>Appointment Details</h1>
 
-<div>
-    <h4>Appointment</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AppointmentDateTime)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AppointmentDateTime)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Notes)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Notes)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FrontImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FrontImageUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LeftImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LeftImageUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RightImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RightImageUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BackImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BackImageUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Patient)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Patient.Contact)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+@if (Model == null)
+{
+    <div class="alert alert-danger">
+        <p>The appointment details are not available. Please return to the list.</p>
+        <a asp-action="Index" class="btn btn-primary">Back to List</a>
+    </div>
+}
+else
+{
+    <div>
+        <h4>Appointment Information</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">Patient Name</dt>
+            <dd class="col-sm-10">@Model.Patient?.Name ?? "Unknown"</dd>
+
+            <dt class="col-sm-2">Patient Email</dt>
+            <dd class="col-sm-10">@Model.Patient?.Email ?? "N/A"</dd>
+
+            <dt class="col-sm-2">Contact</dt>
+            <dd class="col-sm-10">@Model.Patient?.Contact ?? "N/A"</dd>
+
+            <dt class="col-sm-2">Appointment Date & Time</dt>
+            <dd class="col-sm-10">@Model.AppointmentDateTime.ToString("f")</dd>
+
+            <dt class="col-sm-2">Notes</dt>
+            <dd class="col-sm-10">@Model.Notes ?? "No notes provided"</dd>
+        </dl>
+
+        <h4>Images</h4>
+        <hr />
+        <div class="row">
+            @if (!string.IsNullOrEmpty(Model.FrontImageUrl))
+            {
+                <div class="col-sm-3">
+                    <img src="@Model.FrontImageUrl" alt="Front Image" class="img-thumbnail" style="width: 100%; height: auto;" />
+                    <p class="text-center mt-2">Front</p>
+                </div>
+            }
+            @if (!string.IsNullOrEmpty(Model.LeftImageUrl))
+            {
+                <div class="col-sm-3">
+                    <img src="@Model.LeftImageUrl" alt="Left Image" class="img-thumbnail" style="width: 100%; height: auto;" />
+                    <p class="text-center mt-2">Left</p>
+                </div>
+            }
+            @if (!string.IsNullOrEmpty(Model.RightImageUrl))
+            {
+                <div class="col-sm-3">
+                    <img src="@Model.RightImageUrl" alt="Right Image" class="img-thumbnail" style="width: 100%; height: auto;" />
+                    <p class="text-center mt-2">Right</p>
+                </div>
+            }
+            @if (!string.IsNullOrEmpty(Model.BackImageUrl))
+            {
+                <div class="col-sm-3">
+                    <img src="@Model.BackImageUrl" alt="Back Image" class="img-thumbnail" style="width: 100%; height: auto;" />
+                    <p class="text-center mt-2">Back</p>
+                </div>
+            }
+        </div>
+    </div>
+    <div class="mt-3">
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+    </div>
+}
