--- a/Views/Patients/Delete.cshtml
+++ b/Views/Patients/Delete.cshtml
@@ -1,45 +1,49 @@
-@model PatientManagementSystem.Models.Patient
+@model PatientManagementSystem.Models.Appointment
 
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Delete Appointment</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Patient</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateOfBirth)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateOfBirth)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Contact)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Contact)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+@if (Model == null)
+{
+    <div class="alert alert-danger">
+        <p>The appointment details are not available. Please return to the list and try again.</p>
+        <a asp-action="Index" class="btn btn-primary">Back to List</a>
+    </div>
+}
+else
+{
+    <h3>Are you sure you want to delete this appointment?</h3>
+    <div>
+        <h4>Appointment Details</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                Patient Name
+            </dt>
+            <dd class="col-sm-10">
+                @Model.Patient?.Name ?? "Unknown"
+            </dd>
+            <dt class="col-sm-2">
+                Date and Time
+            </dt>
+            <dd class="col-sm-10">
+                @Model.AppointmentDateTime.ToString("f")
+            </dd>
+            <dt class="col-sm-2">
+                Notes
+            </dt>
+            <dd class="col-sm-10">
+                @Model.Notes ?? "No notes available"
+            </dd>
+        </dl>
+
+        <form asp-action="Delete" method="post">
+            <input type="hidden" asp-for="Id" />
+            <button type="submit" class="btn btn-danger">Delete</button>
+            <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+        </form>
+    </div>
+}
