--- a/Views/Patients/Index.cshtml
+++ b/Views/Patients/Index.cshtml
@@ -24,6 +24,8 @@
             </tr>
         </thead>
         <tbody>
+        @if (Model != null)
+        {
             @foreach (var patient in Model)
             {
                 <tr>
@@ -46,11 +48,18 @@
                     </td>
                     <td>
                         <div class="d-flex gap-2">
+                            <a asp-action="AdjustFace" asp-route-id="@patient.Id" class="btn btn-warning btn-sm">Ajustar Rostro</a>
                             <a asp-controller="Patients" asp-action="Edit" asp-route-id="@patient.Id" class="btn btn-warning btn-sm">Editar</a>
                             <a asp-controller="Patients" asp-action="Delete" asp-route-id="@patient.Id" class="btn btn-danger btn-sm">Eliminar</a>
                         </div>
                     </td>
+
                 </tr>
+            }
+            }
+            else
+            {
+                <p>No patients available.</p>
             }
         </tbody>
     </table>
