Added login for admins and controlled access to entire app

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,10 +1,9 @@
 ﻿@model IEnumerable<PatientManagementSystem.Models.Patient>
 
-<h1 class="mb-4">Bienvenido</h1>
-<p class="lead">Listado de Pacientes:</p>
+<h1 class="mb-4">Listado de Pacientes</h1>
 
 <div class="mb-3">
-    <a asp-controller="Patients" asp-action="Create" class="btn btn-primary">Cargar nuevo Paciente</a>
+    <a asp-controller="Patients" asp-action="Create" class="btn btn-primary">Cargar Nuevo Paciente</a>
 </div>
 
 <div class="table-responsive">
