--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
-    @if (Context.Session.GetString("AdminLoggedIn") != null)
+    @if (HttpContext.Session.GetString("AdminLoggedIn") != null)
     {
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom box-shadow mb-3">
